# brain-region-mcp

./: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
brain_region/: cli.py  defaults.py  prior.py  reviews_db.py  server.py
brain_region/adapters/unity/: adapter.py
brain_region/core/: __init__.py  planner.py
brain_region/core/consult/: guard.py
brain_region/core/regions/: loader.py
brain_region/core/reviewers/: loader.py
brain_region/core/stages/: consensus.py  dedup.py  normalize.py  parse.py  review.py  score.py
brain_region/eval/: calibrate.py  cli.py  judge.py
brain_region/knowledge/: yaml_provider.py
brain_region/output/: markdown.py
brain_region/privacy/: strict.py
brain_region/providers/: litellm.py
brainregion/: cli.py  defaults.py  server.py
brainregion/core/: context.py
brainregion/core/consult/: engine.py  prompt.py
brainregion/core/regions/: security.yaml
brainregion/eval/: calibrate.py  cli.py  judge.py  outcome.py  prices.py  runner.py  schema.py  stats.py  store.py
brainregion/eval/gold/: advice_calibration.yaml
brainregion/eval/outcome_fixtures/: outcome_tasks.yaml
brainregion/eval/rubrics/: advice_v1.md
brainregion/inspector/: __init__.py  activation.py  calibration.py  memory.py  render.py  run.py
brainregion/memory/: __init__.py  base.py  governance.py  provider.py  scope.py  store.py
brainregion/viz/: __init__.py  html.py  render.py  snapshot.py
design_review/: __init__.py  defaults.py  reviews_db.py  server.py
design_review/adapters/: base.py
design_review/adapters/generic/: adapter.py
design_review/adapters/unity/: adapter.py
design_review/adapters/unity/knowledge/: netcode.yaml
design_review/adapters/unity/reviewers/: netcode.yaml
design_review/core/: __init__.py  engine.py  pipeline.py  report.py
design_review/core/consult/: engine.py
design_review/core/reviewers/: loader.py
design_review/core/schema/: finding.schema.json  review-report.schema.json
design_review/core/stages/: __init__.py  consensus.py  context.py  normalize.py  parse.py  prompt.py  retrieve.py  review.py  score.py
design_review/knowledge/: base.py  yaml_provider.py
design_review/output/: markdown.py  sarif.py
design_review/providers/: base.py  litellm.py
docs/: config_precedence.md  config_precedence.zh-CN.md  endpoint_config.md  endpoint_config.zh-CN.md
scripts/: meta_eval.py
tests/: conftest.py  smoke_e2e.py  smoke_real.py  test_branding.py  test_budget_effort.py  test_calibrate.py  test_calibrate_advice.py  test_consensus.py  test_consult.py  test_context_provider.py  test_dedup.py  test_defaults.py  test_e2e.py  test_eval_prices.py  test_inspector.py  test_knowledge.py  test_memory_governance.py  test_memory_inject.py  test_memory_scoping.py  test_memory_store.py  test_model_routes.py  test_outcome_eval.py  test_outcome_memory_eval.py  test_outcome_stats.py  test_parsing.py  test_planner.py  test_prior.py  test_privacy.py  test_proxy_endpoints.py  test_regions.py  test_review_memory.py  test_reviewer_loader.py  test_routing_eval.py  test_visionary.py  test_viz.py  test_wake_gate.py
