[project]
name = "brain-region-mcp"
version = "0.1.0"
description = "BrainRegion（脑区）：AI collaboration infrastructure for review, consultation, planning, and memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.2.0",
    "litellm>=1.83.0,<2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
brain-region-mcp = "brain_region.server:main"
brain-region = "brain_region.cli:main"
design-review-mcp = "brain_region.server:main"
design-review = "brain_region.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_region"]

# yaml/json schema 随包发布进 wheel（开发时 uv run 用源码路径读取，force-include 仅 pip 发布生效）。
# generic adapter 无自己的 reviewers（回退 core 通用），故不含 generic/reviewers。
[tool.hatch.build.targets.wheel.force-include]
"brain_region/core/reviewers" = "brain_region/core/reviewers"
"brain_region/core/consultants" = "brain_region/core/consultants"
"brain_region/core/schema" = "brain_region/core/schema"
"brain_region/adapters/unity/reviewers" = "brain_region/adapters/unity/reviewers"
"brain_region/adapters/unity/knowledge" = "brain_region/adapters/unity/knowledge"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# ruff（CI lint）：target 3.10，只抓真问题（F=pyflakes 未用导入/变量 + E/W 基本风格），
# 行长交给编辑器不管（ignore E501）。其余 lint（I/UP/B）等稳定后渐进加。
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W"]
ignore = ["E501"]

# 测试文件常用 sys.path.insert / fixture 前置 import，放宽位置检查（主代码仍严格，逐个 noqa）
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"scripts/*" = ["E402"]
